--- a/web/src/index.pcss
+++ b/web/src/index.pcss
@@ -13,7 +13,9 @@ html {
     margin: 0;
     padding: 0;
     font-size: 18px;
-    font-family: "Sofia Pro", "Roboto", "Helvetica Neue", sans-serif;
+    font-family: var(--sofiaProFontFamily);
+    font-weight: 400;
+    font-style: normal;
     background: var(--bgColor);
     width: 100%;
   }
@@ -25,6 +27,8 @@ html {
 
   h1 {
     font-family: var(--bangersFontFamily);
+    font-weight: 400;
+    font-style: normal;
     letter-spacing: 2px;
     font-size: 3em;
   }
